--- a/package.json
+++ b/package.json
@@ -2,15 +2,14 @@
   "name": "knock_back",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "start": "ts-node src/index.ts",
+    "start": "ts-node src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
     "stop": "pm2 stop school-board",
     "restart": "pm2 restart school-board",
     "delete": "pm2 delete school-board",
-    "start:dev": "nodemon src/index.ts",
-    "seed:run": "ts-node -r tsconfig-paths/register ./node_modules/typeorm-extension/bin/cli.cjs seed:run -d src/data-source.ts",
+    "start:dev": "nodemon src/server.ts",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix"
@@ -20,30 +19,31 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.622.0",
     "@faker-js/faker": "^8.4.1",
-    "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-rate-limit": "^7.4.0",
     "express-validator": "^7.1.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "moment-timezone": "^0.5.45",
+    "mongodb": "^5.8.0",
+    "mongoose": "^8.5.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.14",
     "passport": "^0.7.0",
-    "pg": "^8.12.0",
-    "socket.io": "^4.7.5",
+    "socket.io": "^4.7.1",
     "typeorm": "^0.3.20",
-    "typeorm-extension": "^3.6.0",
     "winston": "^3.14.1",
     "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.8",
     "@babel/core": "^7.25.2",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/jsonwebtoken": "^9.0.6",
@@ -62,7 +62,6 @@
     "ts-node": "^10.9.2",
     "ts-node-dev": "^2.0.0",
     "tsconfig-paths": "^4.2.0",
-    "typeorm-naming-strategies": "^4.1.0",
     "typescript": "^5.5.4"
   }
 }
