--- a/package.json
+++ b/package.json
@@ -50,9 +50,10 @@
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.11",
     "@types/multer-s3": "^3.0.3",
-    "@types/node": "^22.2.0",
+    "@types/node": "^22.4.0",
     "@types/nodemailer": "^6.4.15",
     "@types/pg": "^8.11.6",
+    "@types/socket.io": "^3.0.2",
     "@types/winston": "^2.4.4",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
